--- a/html/sfe/css/output/patterns/0-navigation.css
+++ b/html/sfe/css/output/patterns/0-navigation.css
@@ -267,7 +267,9 @@
     float: left;
     border-bottom: none; }
     .main-nav li:nth-child(2n) {
-      background-color: #282a2a !important; }
+      background-color: #202222 !important; }
+    .main-nav li:nth-child(3) {
+      background-color: inherit; }
     .main-nav li:last-child {
       margin-right: 0; }
     .main-nav li:nth-child(1) {
@@ -313,50 +315,11 @@
     .js nav.nav-collapse .main-nav ul.sub-menu.open li a {
       padding: 0.6em 1em 0.6em 1em; }
   .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(3) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(6) .sub-menu.open {
-    width: auto; }
+    width: auto;
+    min-width: auto; }
   .main-nav .sub-menu li {
     height: auto;
     padding: 0 1em 0 0;
     font-size: 1em; } }
-
-@media only all and (min-width: 58.75em) {
-  .main-nav li.contact-us {
-    max-width: 7%; }
-  .main-nav li.resources {
-    max-width: 16%; } }
-
-@media only all and (min-width: 63.9375em) {
-  .main-nav li.home {
-    width: 8%;
-    max-width: 8%;
-    margin-right: 2%; }
-  .main-nav li.resources {
-    max-width: 14%; }
-  .main-nav li.browse-films {
-    width: 14%; }
-  .main-nav li.contact-us {
-    width: 10%;
-    max-width: 10%;
-    margin-right: 2%; } }
-
-@media only all and (min-width: 68.125em) {
-  nav, .nav-collapse .main-nav {
-    height: 4.9em; }
-  .main-nav li {
-    height: 4.5em; }
-  .nav-collapse .main-nav li a {
-    height: 4em; }
-  .main-nav li:hover .sub-menu, .main-nav .sub-menu {
-    margin-top: 4.7em; }
-  .main-nav .sub-menu li a {
-    height: auto; } }
-
-@media only all and (min-width: 82.25em) {
-  .main-nav li.about a.parent-item {
-    max-width: 60%; } }
-
-@media only all and (min-width: 96.25em) {
-  .main-nav li.about a.parent-item {
-    max-width: 55%; } }
 
 /*# sourceMappingURL=0-navigation.css.map */
