--- a/html/sfe/css/sass/patterns/0-navigation.scss
+++ b/html/sfe/css/sass/patterns/0-navigation.scss
@@ -361,7 +361,10 @@
     float: left;
     border-bottom: none;
     &:nth-child(2n) {
-      background-color: scale-color($dark, $lightness: -12%) !important;
+      background-color: scale-color($dark, $lightness: -30%) !important;
+    }
+    &:nth-child(3) {
+      background-color: inherit;
     }
     &:last-child {
       margin-right: 0;
@@ -438,7 +441,8 @@
 	.js nav.nav-collapse .main-nav li:nth-child(5),
 	.js nav.nav-collapse .main-nav li:nth-child(6) {
 		.sub-menu.open {
-			width: auto; 
+			width: auto;
+			min-width: auto; 
 		}
 	}
 
@@ -450,81 +454,3 @@
   }
   
 } //end min 56em
-
-@media only all and (min-width: 58.75em) {
-  
-  .main-nav li.contact-us {
-    max-width: 7%;
-  }
-  
-  .main-nav li.resources {
-    max-width: 16%;
-  }
-  
-} //end min 58.75em
-
-@media only all and (min-width: 63.9375em) {
-  
-  .main-nav li.home {
-    width: 8%;
-    max-width: 8%;
-    margin-right: 2%;
-  }
-  
-  .main-nav li.resources {
-    max-width: 14%;
-  }
-  
-  .main-nav li.browse-films {
-    width: 14%;
-  }
-  
-  .main-nav li.contact-us {
-    width: 10%;
-    max-width: 10%;
-    margin-right: 2%;
-  }
-
-} // end min 63.9375em
-
-@media only all and (min-width: 68.125em) {
-  
-  nav,
-  .nav-collapse .main-nav {
-    height: 4.9em;
-  }
-  
-  .main-nav li {
-    height: 4.5em;
-  }
-  
-  .nav-collapse .main-nav li a {
-    height: 4em;
-  }
-  
-  .main-nav li:hover .sub-menu,
-  .main-nav .sub-menu {
-    margin-top: 4.7em;
-  }
-  
-  .main-nav .sub-menu li a {
-    height: auto;
-  }
-  
-} //end min 71.25em
-
-@media only all and (min-width: 82.25em) {
-  
-  .main-nav li.about a.parent-item {
-    max-width: 60%;
-  }
-  
-} // end min 82.25em
-
-@media only all and (min-width: 96.25em) {
-  
-  .main-nav li.about a.parent-item {
-    max-width: 55%;
-  }
-  
-} // end min 96.25em
